fix(web): scrollbar styles (#1219)

--- a/packages/web/src/stylesheets/_navigation.scss
+++ b/packages/web/src/stylesheets/_navigation.scss
@@ -60,7 +60,6 @@ $content-horizontal-padding: 16px;
     padding: 4px 14px;
     cursor: pointer;
     transition: height 0.1s ease-in-out;
-    position: relative;
     width: 100%;
 
     > .tag-info {
